--- a/app/components/styles.css
+++ b/app/components/styles.css
@@ -1,12 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;700&family=Roboto:wght@100;400;700&display=swap');
+
 nav {
+    display: flex;
+    justify-content: flex-end;
+    font-family: roboto;
+    font-size: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 80px;
-    margin: 0 24px;
+    margin: 0;
+    position: fixed;
+    width: 100%;
 }
 
 .outerSearchContainer{
+    margin-right: 150px;
     display: flex;
     align-items: center;
 }
