--- a/app/global.css
+++ b/app/global.css
@@ -2,10 +2,11 @@
 
 body {
     margin: 0;
+    background-color: #F7F9EF;
 }
 
 .hero {
-    background-color: #2EC4B6;
+    background-color: #05242E;
     background-size: cover;
     background-position: center;
     height: 600px;
@@ -24,7 +25,7 @@ body {
 }
 
 h1 {
-    color: #F4FEFC;
+    color: #F7F9EF;
     font-family: caveat;
     font-size: 13vw;
     font-weight: 700;
