--- a/app/global.css
+++ b/app/global.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     background-color: #F7F9EF;
+    font-family: Roboto;
 }
 
 .hero {
@@ -38,7 +39,7 @@ h1 {
 
 h2 {
     color: #F4FEFC;
-    font-family: roboto;
+    font-family: Roboto;
     font-weight: 100;
     font-size: 3vw;
     margin: 0;
@@ -48,19 +49,22 @@ h2 {
 }
 
 h3 {
+    display: flex;
+    justify-content: center;
     color: #05242E;
     font-family: caveat;
     font-size: 48px;
+    margin: 0;
 }
 
 footer {
-    font-size: 12px;
+    font-size: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #F7F9EF;
     background-color: #05242E;
-    height: 60px;
+    height: 120px;
     font-family: roboto;
     font-weight: 100;
     text-decoration: none;
@@ -74,8 +78,117 @@ footer a {
     color: #F7F9EF;
 }
 
+footer span, footer a {
+    margin: 0 5px;
+}
+
 .subContainer {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+#articles {
+    margin-top: 100px;
+    height: 650px;
+}
+
+.article-card {
+    display: flex;
+    height: 600px;
+    background-color: #FFFF;
+    margin: 10px;
+    border-radius: 8px;
+    box-shadow: 4px 4px 4px #D6D8CF;
+    overflow: hidden;
+}
+
+.article-image {
+    width: 100%;
+    object-fit: cover;
+}
+
+.articles-list {
+    display: flex;
+    justify-content: center;
+
+}
+
+.about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #C4CB48;
+    height: 650px;
+    margin-top: 100px;
+}
+
+.about-content {
+    width: 400px;
+    height: 400px;
+}
+
+.subscribe-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 600px;
+    margin: 100px 0;
+}
+
+input {
+    font-family: roboto;
+}
+  
+
+  .input-group input[type="email"] {
+    font-family: Roboto;
+    font-weight: 100;
+    color: #05242E;
+    width: 80%;
+    padding: 10px; 
+    margin-bottom: 10px; 
+    border-radius: 5px;
+    border: 1px solid transparent;
+    font-size: 16px;
+    background-color: #EEF1D2;
+    box-shadow: inset 4px 4px 4px #D2D5B9;
+  }
+
+  .input-group input[type="email"]:focus {
+    outline: none;
+  }
+  
+
+  .input-group button[type="submit"] {
+    font-family: roboto;
+    padding: 5px 20px; 
+    border-radius: 5px; 
+    color: #05242E;
+    background-color: #C4CB48;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .input-group button[type="submit"]:active {
+    background-color: #05242E;
+    color: #C4CB48;
+    border: 2px solid #C4CB48;
+  }
+  
+  
+  
+  .subscribe-container p {
+      color: #05242E;
+      max-width: 600px;
+      font-weight:300;
+    }
+    
+    .input-group button[type="submit"]:disabled {
+      background-color: #C4CB48;
+      cursor: default;
+      border: 2px solid #05242E;
+      color: #05242E;
+    }
