--- a/app/global.css
+++ b/app/global.css
@@ -182,6 +182,7 @@ footer span, footer a {
     font-size: 16px;
     font-weight: 300;
     border: 1px solid #003327;
+    text-decoration: none;
 }
 
 .primary-button:hover {
@@ -308,4 +309,30 @@ input {
         flex-wrap: wrap;
         margin: 0;
         height: 68px;
+    }
+
+
+    .loading-container { 
+        padding-top: 100px;
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    .error-container {
+        padding-top: 100px;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    .error-title {
+        color: #05242E;
+        font-family: Roboto;
+        font-size: 40px;
     }
