--- a/app/components/article/styles.css
+++ b/app/components/article/styles.css
@@ -39,7 +39,7 @@
     padding: 24px 80px;
 }
 
-.article-content {
+.article-inner-content {
     font-size: 16px;
     font-weight: 400;
     margin: 0 60px;
@@ -70,4 +70,16 @@
 
 .article-image {
     max-width: 472px;
+}
+
+.like-button {
+    all: unset;
+    font-weight: 500;
+    margin-right: 16px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.like-count {
+    padding-right: 4px;
 }
