Fix responsive image sizing in article layout.

--- a/app/global.css
+++ b/app/global.css
@@ -139,6 +139,10 @@ footer span, footer a {
     object-fit: cover;
 }
 
+.article-image img {
+    width: 100%;
+}
+
 .articles-list {
     display: flex;
     justify-content: center;
