--- a/app/global.css
+++ b/app/global.css
@@ -330,13 +330,35 @@ input {
     }
 
 
-    .loading-container { 
-        padding-top: 100px;
-        height: 400px;
+    .spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border-left-color: #E9E9E9;
+        margin: 55px;
+      
+        animation: spin 1s ease infinite;
+      }
+      
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      
+    
+    .loading {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
-        font-size: 20px;
+        justify-content: center;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 500;
     }
 
     .error-container {
